Bug fix for checkbox not showing in chrome

--- a/dashboard/dashBoard-v3(signup-form)/css/register-organisation.css
+++ b/dashboard/dashBoard-v3(signup-form)/css/register-organisation.css
@@ -298,6 +298,7 @@ input[type=checkbox],
 input[type=checkbox]:focus
 {
   all: revert !important;
+  -webkit-appearance:checkbox !important;
 }
 
 #register-submit {
